force-app/main/default/objects/FAT__c/FAT__c.object-meta.xml
<CustomObject>
    <description>Fiber Access Terminal (FAT) is the secondary splitter, the outputs from which the homes are directly connected</description>
    <label>FAT</label>
    <nameField>
        <label>FAT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FATs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>