force-app/main/default/objects/FAT__c/fields/FATFullAddress__c.field-meta.xml
<CustomField>
    <fullName>FATFullAddress__c</fullName>
    <description>Installation Address of the FAT Box (Fiber Access Terminal)</description>
    <inlineHelpText>Installation Address of the FAT Box (Fiber Access Terminal)</inlineHelpText>
    <label>FAT Full Address</label>
    <type>TextArea</type>
</CustomField>