force-app/main/default/objects/FAT__c/fields/FATLocation__c.field-meta.xml
<CustomField>
    <fullName>FATLocation__c</fullName>
    <description>Holds the wing/floor of the apartment/building</description>
    <inlineHelpText>Holds the wing/floor of the apartment/building</inlineHelpText>
    <label>FAT Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>