force-app/main/default/objects/FAT__c/fields/FATNumber__c.field-meta.xml
<CustomField>
    <fullName>FATNumber__c</fullName>
    <externalId>true</externalId>
    <label>FAT Number</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>