force-app/main/default/objects/FAT__c/fields/FDCLocation__c.field-meta.xml
<CustomField>
    <fullName>FDCLocation__c</fullName>
    <label>FDCLocation</label>
    <type>TextArea</type>
</CustomField>