force-app/main/default/objects/FAT__c/fields/GPON__c.field-meta.xml
<CustomField>
    <fullName>GPON__c</fullName>
    <label>GPON</label>
    <referenceTo>GPON__c</referenceTo>
    <relationshipName>FATBoxes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>