force-app/main/default/objects/FAT__c/fields/GPONId__c.field-meta.xml
<CustomField>
    <fullName>GPONId__c</fullName>
    <label>GPON Id</label>
    <length>16</length>
    <type>Text</type>
</CustomField>