force-app/main/default/objects/FAT__c/fields/IsMobilityConnected__c.field-meta.xml
<CustomField>
    <fullName>IsMobilityConnected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if the FAT (Fiber Access Terminal) is connected to a Mobility Tower in which case the impact will be huge in case of an issue with this FAT</description>
    <inlineHelpText>This field indicates if the FAT i(Fiber Access Terminal) s connected to a Mobility Tower in which case the impact will be huge in case of an issue with this FAT</inlineHelpText>
    <label>Is Mobility Connected</label>
    <type>Checkbox</type>
</CustomField>