force-app/main/default/objects/FAT__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GPONId__c</columns>
    <columns>GPON__c</columns>
    <columns>FATLocation__c</columns>
    <columns>FATNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>